--- a/mobile/android/app/src/main/res/values/strings.xml
+++ b/mobile/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,101 @@
 <resources>
     <string name="app_name">Polyglot</string>
+    <string name="greeting">Welcome to Polyglot!</string>
+    <string name="login">Login</string>
+    <string name="language_menu_title">Choose languages that you want to learn</string>
+    <string name="your_picks">Your picks:</string>
+    <string name="language_menu_warning">Please choose at least one language</string>
+    <string name="done">Done</string>
+    <string name="login_title">Log in to your account</string>
+    <string name="welcome_back">Welcome back!</string>
+    <string name="register">Register</string>
+    <string name="email_or_username_placeholder">Enter your email or username</string>
+    <string name="password_placeholder">Enter your password</string>
+    <string name="forgot_password">Forgot your password? Reset</string>
+    <string name="or">Or</string>
+    <string name="log_in_with_Google">Log in with Google</string>
+    <string name="username_placholder">Enter your username</string>
+    <string name="email_placeholder">Enter your email</string>
+    <string name="native_language_placholder">Choose your native language</string>
+    <string name="password_verify_placeholder">Enter your password again</string>
+    <string name="daily_words">Daily words</string>
+    <string name="your_saved_words">Your saved words</string>
+    <string name="review_title">Review your vocabulary</string>
+    <string name="review_subtitle">Feel confident about your vocabulary? Take a quick or full review of all your saved words!</string>
+    <string name="quick_review">Quick Review</string>
+    <string name="quick_review_subtitle">Take a short quiz (10 questions or less) to review your vocabulary</string>
+    <string name="full_review">Full Review</string>
+    <string name="full_review_subtitle">Take a full review of all your saved words. You will feel more confident in your vocabulary</string>
+    <string name="search_words">Search words</string>
+    <string name="joined_since">Joined since</string>
+    <string name="all_saved_words">All saved words</string>
+    <string name="words">words</string>
+    <string name="all">All</string>
+    <string name="word_topic_stats">Word Topic Stats</string>
+    <string name="word_topic_stats_subtitle">This shows how many words in each category you saved</string>
+    <string name="your_feed">Your feed</string>
+    <string name="feed_topics">Feed Topics</string>
+    <string name="feed_topics_sub">Filter your feed to specific topics</string>
+    <string name="feed_subtitle">News and videos generated from your saved words</string>
+    <string name="definition">Definition</string>
+    <string name="look_up_definitions">Look up definitions</string>
+    <string name="find_images">Find images</string>
+    <string name="translated">Translated</string>
+    <string name="subtitle_action">Subtitle Action</string>
+    <string name="subtitle_action_instruction">Press and hold on a word</string>
+    <string name="find_definition_for">Find definition for</string>
+    <string name="news">News</string>
+    <string name="video">Video</string>
+    <string name="share">Share</string>
+    <string name="custom_feed">Custom Feed</string>
+    <string name="custom_feed_subtitle">Add news or video url from outside source</string>
+    <string name="account">Account</string>
+    <string name="change_profile_icon">Change profile icon</string>
+    <string name="logout">logout</string>
+    <string name="native_language">Native language</string>
+    <string name="settings">Settings</string>
+    <string name="subscription">Subscription</string>
+    <string name="free">Free</string>
+    <string name="premium">Premium</string>
+    <string name="one_time">one time</string>
+    <string name="no_ads">no_ads</string>
+    <string name="translated_video_cation">Translated video caption</string>
+    <string name="topic_filter">Topic filter for daily words and feed</string>
+    <string name="support">Support Polyglot 🚀</string>
+    <string name="app_language">App language</string>
+    <string name="notifications">Notifications</string>
+    <string name="notifications_sub">If enabled, you will receive push notifications</string>
+    <string name="daily_word_count">Daily word count</string>
+    <string name="daily_word_count_sub">This will determine how many daily words you receive</string>
+    <string name="daily_word_topic">Daily word topic</string>
+    <string name="animal">Animal</string>
+    <string name="human">Human</string>
+    <string name="pick_your_avatar">Pick your avatar</string>
+    <string name="save">Save</string>
+    <string name="pick_a_language">Pick a language</string>
+    <string name="url_placholder">Enter url</string>
+    <string name="add">Add</string>
+    <string name="sport">Sport</string>
+    <string name="gaming">Gaming</string>
+    <string name="business">Business</string>
+    <string name="tech">Tech</string>
+    <string name="beauty">Beauty</string>
+    <string name="movie">Movie</string>
+    <string name="politics">Politics</string>
+    <string name="click_to_get_more_info">Click to get more info</string>
+    <string name="example">Example: </string>
+    <string name="fail_message">Hmm... It seems like you didn't pass the review, keep on practicing!</string>
+    <string name="try_again">Try Again</string>
+    <string name="success_message1">Congratulation! You have got</string>
+    <string name="success_message2">of the answers correct!</string>
+    <string name="update">Update</string>
+    <string name="update_account">Update Account</string>
+    <string name="update_placholder">Enter new value</string>
+    <string name="register_sub">Learn multiple languages in one place!</string>
+    <string name="word_placholder">Enter words...</string>
+    <string name="only_essential_features">Only essential features</string>
+    <string name="question">What is the definition of the word in the following audio?</string>
+    <string name="check_answer">Check Answer</string>
+    <string name="back">Back</string>
+
 </resources>
