--- a/mobile/android/app/src/main/res/values-vi/strings.xml
+++ b/mobile/android/app/src/main/res/values-vi/strings.xml
@@ -34,9 +34,9 @@
     <string name="all">Tất cả</string>
     <string name="word_topic_stats">Thống kê Chủ đề Từ</string>
     <string name="word_topic_stats_subtitle">Điều này cho biết bạn đã lưu bao nhiêu từ trong mỗi danh mục</string>
-    <string name="your_feed">Nguồn cấp dữ liệu của bạn</string>
-    <string name="feed_topics">Chủ đề nguồn cấp dữ liệu</string>
-    <string name="feed_topics_sub">Lọc nguồn cấp dữ liệu của bạn theo các chủ đề cụ thể</string>
+    <string name="your_feed">Feed của bạn</string>
+    <string name="feed_topics">Chủ đề Feed</string>
+    <string name="feed_topics_sub">Lọc feed của bạn theo các chủ đề cụ thể</string>
     <string name="feed_subtitle">Tin tức và video được tạo từ các từ đã lưu của bạn</string>
     <string name="definition">Sự định nghĩa</string>
     <string name="look_up_definitions">Tra cứu định nghĩa</string>
@@ -55,11 +55,11 @@
     <string name="logout">đăng xuất</string>
     <string name="native_language">Tiếng mẹ đẻ</string>
     <string name="settings">Cài đặt</string>
-    <string name="subscription">Đăng ký</string>
-    <string name="free">Rảnh rỗi</string>
-    <string name="premium">Phần thưởng</string>
+    <string name="subscription">Subscription</string>
+    <string name="free">Free</string>
+    <string name="premium">Premium</string>
     <string name="one_time">một lần</string>
-    <string name="no_ads">no_ads</string>
+    <string name="no_ads">No ads</string>
     <string name="translated_video_cation">Chú thích video đã dịch</string>
     <string name="topic_filter">Bộ lọc chủ đề cho các từ và nguồn cấp dữ liệu hàng ngày</string>
     <string name="support">Hỗ trợ Polyglot 🚀</string>
