Change the feed topic into a list of item

--- a/mobile/android/app/src/main/res/values-es/strings.xml
+++ b/mobile/android/app/src/main/res/values-es/strings.xml
@@ -83,6 +83,7 @@
     <string name="tech">Tecnología</string>
     <string name="beauty">Belleza</string>
     <string name="movie">Película</string>
+    <string name="entertainment">Entertainment</string>
     <string name="politics">Política</string>
     <string name="click_to_get_more_info">Haga clic para obtener más información</string>
     <string name="example">Ejemplo:</string>
