--- a/mobile/android/app/src/main/res/values-vi/strings.xml
+++ b/mobile/android/app/src/main/res/values-vi/strings.xml
@@ -83,6 +83,7 @@
     <string name="beauty">Sắc đẹp</string>
     <string name="movie">Bộ phim</string>
     <string name="politics">Chính trị</string>
+    <string name="entertainment">Entertainment</string>
     <string name="click_to_get_more_info">Bấm để biết thêm thông tin</string>
     <string name="example">Thí dụ:</string>
     <string name="fail_message">Hừm ... Có vẻ như bạn không vượt qua được bài đánh giá, hãy tiếp tục luyện tập!</string>
