--- a/mobile/android/app/src/main/res/values-vi/strings.xml
+++ b/mobile/android/app/src/main/res/values-vi/strings.xml
@@ -1,5 +1,8 @@
 <resources>
 
+    <string name="banner_id">ca-app-pub-9280842546374512/9467239369</string>
+    <string name="interstitial_id">ca-app-pub-9280842546374512/3600120424</string>
+
     <string name="app_name">Đa ngữ</string>
     <string name="greeting">Chào mừng bạn đến với Polyglot!</string>
     <string name="login">Đăng nhập</string>
