--- a/mobile/android/app/src/main/res/values/strings.xml
+++ b/mobile/android/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
+
+    <string name="banner_id">ca-app-pub-9280842546374512/9467239369</string>
+    <string name="interstitial_id">ca-app-pub-9280842546374512/3600120424</string>
+
     <string name="app_name">Polyglot</string>
     <string name="greeting">Welcome to Polyglot!</string>
     <string name="login">Login</string>
